$Id$

Changes between 0.8.1 and 0.8.2-test1:
-----------------------------------------------------

Core support:
 * Rewrite of the playlist
    - Tree structure
    - Input preparsing (for meta-data)
    - Grouping (by artist, ...) support 
 * Preferences improvements: 
    - New organization, designed to improve usability
    - New configuration types (list of modules, ...)
 * XML parsers
 * Core image manipulation support
 * Client-side SSL/TLS support
 * SSL Client certificates checking support (allows for secure VoD)
 * Renamed --spu-channel to --sub-track
 * Renamed --spumargin to --sub-margin
 * Renamed --audio-channel to --audio-track
 * Renamed --filter to --vout-filter
 * filters, extra interfaces, visualizations and service discovery modules are
   now seperated by ':' instead of ','
 * Access filter architecture
 * Track selection based on preferred language (--sub-language and --audio-language)
 * Zsh autocompletion for vlc's arguments
 * Many bugfixes...

Input/Demuxers:
 * Support for SOCKS proxy
 * Support for Shoutcast Meta-data
 * Support for (HE-)AAC raw-audio streams
 * Support for images on a HTTP server that get refreshed on the server
 * Better support for Kasenna streams
 * RTSP UDP->TCP rollover support
 * Massive Matroska improvements
 * Support for XA and VOC audio files
 * TiVo demuxer
 * Samba (Windows shares) access module
 * Improved CDDAX module (uses several playlist items)
 * Fixes to Linux DVB support
 * Fix the "negative subtitles delay" bug
 * Support for FTP over IPv6

Decoders / Encoders:
 * Dirac decoder and encoder
 * PNG decoder/encoder
 * Improvements to DVB subtitles encoder
 * Support for Apple Lossless Audio Codec

Access filters:
 * New Record and Timeshift filters

Services discovery:
 * New type of modules, that add items to the playlist
 * Brand new SAP module
     * To enable SAP, you now need to use "-S sap" or add SAP in 
       the "Manage->Services Discovery" menu
     ( IPv6 SAP is now enabled by default )